src/grammar
<expression> ::= <term> { ('+' | '-') <term> }*
<term> ::= <base> { ('*' | '/' | '%') <base> }*
<base> ::= ['-'] <power>
<power> ::= <factor> { '^' <power> }*
<factor> ::= '(' <expression> ')' | <call> | number
<call> ::= identifier [ '(' <args> ')' ]
<args> ::= <expression> [ '(' ',' <expression> ')' ]
